@@ -1,6 +1,12 @@
 v3.3.21 (XXXX-XX-XX)
 --------------------
 
+* fix thread shutdown in _WIN32 builds
+
+  Previous versions used a wrong comparison logic to determine the current
+  thread id when shutting down a thread, leading to threads hanging in their
+  destructors on thread shutdown
+
 * fixed TypeError being thrown instead of validation errors when Foxx manifest
   validation fails
 
